libs/parser/testdata/errors/at_empty_path.csl
# Test rejection of @ with empty path
host: @configs:
